--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Praveen Suggula</a>
+			<a class="navbar-brand" href="index.html">Praveen Kumar Suggula</a>
 			<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse"
 				data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
@@ -144,8 +144,7 @@
 				<div class="container">
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
-						<div class="one-third js-fullheight order-md-last img circle-image"
-							style="background-image:url(images/bg_1.png);">
+						<div class="one-third js-fullheight order-md-last img image-bg">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate"
@@ -164,10 +163,10 @@
 
 									// Create an array of typing text
 									const typingTexts = [
-										'Ex-Intern Developer at ISN  ',
-										'Ex-Software Developer at PSS  ',
-										'M.S. in Computer Science    ',
-										'Teaching Assistant at UNT   ',
+										'M.S. in Computer Science      ',
+										'Ex-Intern at ISN      ',
+										'Ex-Developer at PSS      ',
+										'Teaching Assistant at UNT     ',																				
 									];
 
 									// Create a function to display the typing animation for a given text
@@ -498,8 +497,8 @@
 				<div class="col-md-12">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Sep 2021 – Jul 2023</span>
-						<h2>Full Stack .NET Software Developer</h2>
-						<span class="position">Technology Solutions Provider (SaaS & Enterprise Software)</span>
+						<h2>Software Engineer</h2>
+						<span class="position">Pyramid SoftSol Pvt Ltd</span>
 						<p class="mt-4">
 							Worked on a <strong>cloud-based virtual consultation platform</strong>, providing secure and
 							scalable
@@ -544,7 +543,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Mar 2021 – Aug 2021</span>
 						<h2>Trainee Software Engineer</h2>
-						<span class="position">Technology Solutions Provider (SaaS & Enterprise Software)</span>
+						<span class="position">Pyramid SoftSol Pvt Ltd</span>
 						<p class="mt-4">
 							Assisted in modernizing <strong>legacy healthcare applications</strong> and implementing
 							<strong>AI-driven automation</strong> for document processing, while gaining hands-on
@@ -578,7 +577,7 @@
 			<br>
 			<br>
 			<div class="row">
-				<h1 class="big-4">Education</h1>
+				<h1 class="big-3">Education</h1>
 				<div class="underline"></div>
 			</div>
 			<br>
@@ -612,7 +611,7 @@
 
 	</section>
 
-	<section class="ftco-section" id="projects-section">
+	<section class="ftco-section" id="project-section">
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-5">
 				<div class="col-md-7 heading-section text-center ftco-animate">
@@ -725,7 +724,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18">
 						<div class="text">
-							<strong class="number" data-number="1000">0</strong>
+							<strong class="number" data-number="500">0</strong>
 							<span>Mentored Students</span>
 						</div>
 					</div>
@@ -733,7 +732,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18">
 						<div class="text">
-							<strong class="number" data-number="500">0</strong>
+							<strong class="number" data-number="100">0</strong>
 							<span>Cups of coffee</span>
 						</div>
 					</div>
@@ -749,7 +748,7 @@
 					<div class="heading">
 						<h4> I love to solve business problems &amp; uncover hidden data stories </h4>
 						<br>
-						<p><a href="https://github.com/praveenkumarsuggula" class="btn btn-primary py-3 px-5">GitHub</a>
+						<p><a href="https://github.com/praveenkumarsuggula" class="btn btn-primary py-3 px-5" target="_blank">GitHub</a>
 						</p>
 					</div>
 				</div>
@@ -795,7 +794,7 @@
 							<span class="icon-paper-plane"></span>
 						</div>
 						<h3 class="mb-4">Email Address</h3>
-						<p style="margin-left: -50px;"><a
+						<p style="margin-left: -30px;"><a
 								href="mailto:praveenkumar.suggula0@gmail.com">praveenkumar.suggula0@gmail.com</a></p>
 					</div>
 				</div>
